# koto

./: README.md  config.vapi  dobuild.sh  koto.vala  meson.build  utils.vala
controls/: album_item.vala  flat_icon_button.vala  headerbar.vala  list.vala  menu_item.vala  menu_popover.vala  playerbar.vala  text_list_item.vala  track_item.vala  views_list.vala
data/: artist.vala  db.vala  indexer.vala  io.vala  metadata.vala
data/css/: css.gresource.xml  style.css
misc/: utils.vala
playback/: engine.vala  keyboard.vala  notification.vala  playlist.vala
views/: devices.vala  getting_started.vala  library.vala  library_grid.vala  library_list.vala  library_tracks.vala  view_cover.vala  view_grid.vala  view_library_grid.vala  view_library_list.vala  view_list.vala
